[tool.poetry]
name = "repl_python3_day2comp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^3.2.4"
Flask-RESTful = "^0.3.9"
Werkzeug = "^2.0.2"
Flask = "^2.0.2"
Flask-Cors = "^3.0.10"
beautifulsoup4 = "^4.10.0"
google = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
